--- a/views/room.ejs
+++ b/views/room.ejs
@@ -50,7 +50,7 @@
                     <div class="u-size-30 u-size-60-md">
                       <div class="u-layout-col">
                         <div
-                          class="u-container-style u-layout-cell u-radius-10 u-shape-round u-size-60 u-layout-cell-1">
+                          class="u-container-style u-layout-cell u-radius-10 u-shape-round u-layout-cell-1">
                           <div
                             class="u-border-2 u-border-palette-4-light-2 u-container-layout u-valign-middle u-container-layout-1">
                             <div class="u-list u-list-1">
