--- a/public/css/room.css
+++ b/public/css/room.css
@@ -128,6 +128,7 @@ body .twitter svg {
 }
 
 #order-list-title {
+  margin-top: -10px;
   color: aqua;
 }
 
@@ -203,7 +204,7 @@ body .twitter svg {
 /* List Order Detail */
 .orders-list {
   max-width: 500px;
-  height: 400px;
+  height: 350px;
   padding: 5px;
   box-shadow: 0px 12px 24px rgba(0, 0, 0, 0.06);
   overflow: auto;
@@ -289,7 +290,7 @@ ol span:before {
 
 .u-section-1 .u-list-1 {
   width: 496px;
-  height: 900px;
+  height: 840px;
   margin: 10px auto 10px auto;
 }
 
@@ -458,6 +459,7 @@ ol span:before {
 }
 
 .u-section-1 .u-container-layout-7 {
+  height: 390px;
   box-shadow: #00ADB5 0px 0px 0px 1px;
   padding: 30px;
 }
@@ -467,6 +469,7 @@ ol span:before {
 }
 
 .u-section-1 .u-container-layout-8 {
+  height: 390px;
   box-shadow: #00ADB5 0px 0px 0px 1px;
   padding: 30px;
 }
