--- a/public/css/room.css
+++ b/public/css/room.css
@@ -15,7 +15,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #222831 !important;
+  /* background-color: #222831 !important; */
 }
 
 body .dribbble {
@@ -42,6 +42,7 @@ body .twitter svg {
   height: 24px;
   fill: white;
 }
+
 /** POPUP DEFINE USERNAME */
 .popup {
   z-index: 10000;
