--- a/views/room.ejs
+++ b/views/room.ejs
@@ -105,7 +105,7 @@
                                         </label>
                                         x <%=orderDetail.foodPrice %> </br> [<%=orderDetail.orderTime %>]
                                             <label id="food-amount">
-                                              [SL: <%=orderDetail.foodAmount %>]
+                                              [Qty: <%=orderDetail.foodAmount %>]
                                             </label>
                                       </span>
                                     </li>
