--- a/public/css/room.css
+++ b/public/css/room.css
@@ -125,7 +125,7 @@ body .twitter svg {
 
 /** ORDER LIST */
 #red-txt {
-  color: red;
+  color: rgb(255, 0, 0);
 }
 
 #order-list-title {
@@ -207,7 +207,7 @@ body .twitter svg {
   max-width: 500px;
   height: 350px;
   padding: 5px;
-  box-shadow: 0px 12px 24px rgba(0, 0, 0, 0.06);
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
   overflow: auto;
 }
 
@@ -229,10 +229,10 @@ ol span {
   padding: .4em .4em .4em 2.5em;
   margin: .5em 0;
   color: rgb(255, 255, 255);
-  box-shadow: 0px 0px 8px 0px rgba(128, 128, 128, 1);
   text-decoration: none;
   border-radius: .3em;
   transition: .3s ease-out;
+  box-shadow: rgba(255, 255, 255, 0.2) 0px 0px 0px 1px inset, rgba(0, 0, 0, 0.9) 0px 0px 0px 1px;
 }
 
 ol span:hover {
@@ -253,7 +253,7 @@ ol span:before {
   content: counter(li);
   counter-increment: li;
   position: absolute;
-  left: 0.2em;
+  left: 0.3em;
   top: 60%;
   margin-top: -1.3em;
   background: #08D9D6;
@@ -265,6 +265,42 @@ ol span:before {
   border-radius: 2em;
   transition: all .3s ease-out;
 }
+
+/* SUMMARY SECTION */
+.summary-container {
+  align-items: center;
+  width: 280px;
+  height: 300px;
+  overflow-y: auto;
+}
+
+.summary-food {
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.603) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  margin: 10px;
+}
+
+.food-image {
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+.food-text {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+}
+
+.food-text span {
+  white-space: nowrap;
+}
+
 
 /* MENU SECTION */
 .u-section-1 {
@@ -460,7 +496,7 @@ ol span:before {
 }
 
 .u-section-1 .u-container-layout-7 {
-  height: 390px;
+  height: 391px;
   box-shadow: #00ADB5 0px 0px 0px 1px;
   padding: 30px;
 }
