--- a/public/css/room.css
+++ b/public/css/room.css
@@ -123,63 +123,6 @@ body .twitter svg {
   cursor: pointer;
 }
 
-/** ORDER LIST */
-#red-txt {
-  color: rgb(255, 0, 0);
-}
-
-#order-list-title {
-  margin-top: -10px;
-  color: aqua;
-}
-
-.order-list {
-  display: flex;
-  flex-direction: column;
-  max-width: 500px;
-  height: 400px;
-  padding: 5px;
-  box-shadow: 0px 12px 24px rgba(0, 0, 0, 0.06);
-  overflow-y: auto;
-}
-
-.order-list ol {
-  padding-left: 50px;
-}
-
-.order-list li {
-  color: #fcfcfc;
-  padding-left: 16px;
-  margin-top: 24px;
-  position: relative;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.order-list li:before {
-  content: "";
-  display: block;
-  height: 42px;
-  width: 42px;
-  border-radius: 50%;
-  border: 2px solid #ddd;
-  position: absolute;
-  top: -10px;
-  left: -34px;
-}
-
-.order-list strong {
-  color: #ff0000;
-}
-
-.order-list ol.alternating-colors li:nth-child(odd):before {
-  border-color: #0BAD02;
-}
-
-.order-list ol.alternating-colors li:nth-child(even):before {
-  border-color: #0BAD02;
-}
-
 /* Order Button */
 .button-order {
   cursor: pointer;
@@ -202,13 +145,56 @@ body .twitter svg {
   border: 3px solid #FF2E63;
 }
 
-/* List Order Detail */
+/* ORDER LIST SECTION */
 .orders-list {
   max-width: 500px;
   height: 350px;
   padding: 5px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
   overflow: auto;
+}
+
+.order-detail {
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.603) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  margin: 10px;
+}
+
+#order-list-title {
+  margin-top: -10px;
+  color: aqua;
+}
+
+#user-txt {
+  font-size: 18px;
+  font-weight: bold;
+  color: rgb(255, 0, 0);
+  text-transform: uppercase;
+}
+
+#order-time-txt {
+  font-size: 12px;
+  color: gray;
+  text-decoration: none;
+}
+
+#food-amount-txt {}
+
+.user-avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+.order-text {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
 }
 
 li {
@@ -256,10 +242,10 @@ ol span:before {
   left: 0.3em;
   top: 60%;
   margin-top: -1.3em;
-  background: #08D9D6;
+  background: #08d9d6d7;
   height: 2em;
   width: 2em;
-  border: .3em solid #fff;
+  border: .2em solid #fff;
   text-align: center;
   font-weight: bold;
   border-radius: 2em;
