--- a/views/room.ejs
+++ b/views/room.ejs
@@ -99,8 +99,8 @@
                                       <span class="order-detail">
                                         <img class="user-avatar" alt="User Avatar" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsYWKr4D2H-8MuRFs-mhahtrvUO6pGGFAYCw&usqp=CAU">
                                         <div class="order-text">
-                                          <label><label id="user-txt"><%= orderDetail.orderUser %> </label><label id="order-time-txt"><%=orderDetail.orderTime %></label></label>
-                                          <label><label id="food-amount-txt"><%=orderDetail.foodAmount %> x </label><%= orderDetail.foodTitle %> x <%=orderDetail.foodPrice %></label>
+                                          <label id="order-info-1"><label id="user-txt"><%= orderDetail.orderUser %> </label><label id="order-time-txt"><%=orderDetail.orderTime %></label></label>
+                                          <label id="order-info-2"><label id="food-amount-txt"><%=orderDetail.foodAmount %> x </label><%= orderDetail.foodTitle %> x <%=orderDetail.foodPrice %></label>
                                         </div>
                                       </span>
                                     </li>
