update UI, clean code

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -122,7 +122,7 @@
                               <div
                                 class="u-border-2 u-border-palette-4-light-2 u-container-layout u-container-layout-7">
 
-                                <h2 id="order-list-title">Comming Soon</h2>
+                                <h2 id="order-list-title">Summary Order (Beta)</h2>
 
                                 <div class="summary-container">
 
