--- a/public/css/room.css
+++ b/public/css/room.css
@@ -151,9 +151,10 @@ body {
 
 #user-txt {
   font-size: 18px;
-  font-weight: 700;
+  font-weight: 900;
   text-transform: uppercase;
   color: rgb(255, 0, 0);
+  text-shadow: none;
 }
 
 #user-txt:hover {
@@ -163,7 +164,7 @@ body {
 #order-time-txt {
   font-size: 12px;
   color: gray;
-  text-decoration: none;
+  margin-left: 5px;
 }
 
 #order-time-txt:hover {
@@ -172,6 +173,11 @@ body {
 
 #food-amount-txt:hover {
   cursor: pointer;
+}
+
+#order-info-1 {
+  display: flex;
+  align-items: center;
 }
 
 #order-info-1:hover {
