--- a/views/room.ejs
+++ b/views/room.ejs
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="/css/bg.css">
   <link rel="stylesheet" href="/css/toastr.min.css">
 
-  <script defer src="http://192.168.33.21:3000/socket.io/socket.io.js"></script>
+  <script defer src="http://localhost:3000/socket.io/socket.io.js"></script>
   <script defer src="/script/jquery.js"></script>
   <script defer src="/script/nicepage.js"></script>
   <script defer src="/script/script.js"></script>
