--- a/public/css/nicepage.css
+++ b/public/css/nicepage.css
@@ -11836,7 +11836,8 @@ section.u-image:not(.u-hover-box),
   margin: -5px;
 }
 .u-gutter-10 .u-layout .u-layout-cell {
-  border: 5px solid transparent;
+  border: 1px solid rgb(109,49,168);
+  background-color: rgb(25,25,25);
 }
 .u-gutter-10.u-layout-spacing-top {
   padding-top: 10px;
