--- a/public/css/room.css
+++ b/public/css/room.css
@@ -9,13 +9,22 @@ html {
 }
 
 body {
-  overflow: hidden;
-  min-height: 100vh;
-  font-family: "Inter";
+  position: relative; 
+  height: 100vh;
+  width: 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
-  /* background-color: #222831 !important; */
+  justify-content: center;
+}
+body::before {
+  content: "";
+  background-image: url(background.jpg);
+  background-size: cover;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
 }
 
 /** POPUP DEFINE USERNAME */
@@ -145,6 +154,7 @@ body {
 }
 
 #order-list-title {
+  font-family: 'Roboto';
   margin-top: -10px;
   font-size: 20px;
   color: aqua;
@@ -352,7 +362,7 @@ ol span:before {
 }
 
 .u-section-1 .u-container-layout-1 {
-  box-shadow: #00ADB5 0px 0px 0px 1px;
+  /* box-shadow: #00ADB5 0px 0px 0px 1px; */
   padding: 0;
   overflow-y: scroll;
 }
@@ -370,15 +380,16 @@ ol span:before {
 }
 
 .u-section-1 .u-list-item-1 {
-  background: #393E46;
+  /* background: #393E46;
   box-shadow: 0px 0px 8px 0px #FF2E63;
-  border: 2px solid transparent;
+  border: 2px solid transparent; */
+
+  background: rgb(24,22,34) !important;
+  border: 1px solid rgb(109,49,168);
 }
 
 .u-section-1 .u-list-item-1:hover {
-  background-color: #2cccc4;
-  box-shadow: 0px 0px 8px 0px #FF2E63;
-  border: 2px solid #FF2E63;
+  background: rgb(25,25,25) !important;
 }
 
 .u-section-1 .u-container-layout-2 {
@@ -519,17 +530,17 @@ ol span:before {
 }
 
 .u-section-1 .u-container-layout-6 {
-  box-shadow: #00ADB5 0px 0px 0px 1px;
+  /* box-shadow: #00ADB5 0px 0px 0px 1px; */
   padding: 30px;
 }
 
 .u-section-1 .u-layout-cell-3 {
-  min-height: 427px;
+  /* min-height: 427px; */
 }
 
 .u-section-1 .u-container-layout-7 {
   height: 391px;
-  box-shadow: #00ADB5 0px 0px 0px 1px;
+  /* box-shadow: #00ADB5 0px 0px 0px 1px; */
   padding: 30px;
 }
 
